--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@ag-grid-community/core": "^32.3.3",
     "@ag-grid-community/react": "^32.3.3",
     "@babel/runtime": "^7.26.7",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.1.4",
@@ -27,12 +29,16 @@
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-day-picker": "^9.4.3",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
@@ -40,7 +46,8 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^3.24.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,6 +74,7 @@
     ]
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.16",
     "json-loader": "^0.5.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5",
