--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@ag-grid-community/client-side-row-model": "^32.3.3",
     "@ag-grid-community/core": "^32.3.3",
     "@ag-grid-community/react": "^32.3.3",
+    "@aws-amplify/auth": "^6.0.12",
+    "@aws-amplify/core": "^6.0.12",
     "@babel/runtime": "^7.26.7",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -24,6 +26,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.6",
     "ag-grid-react": "^33.0.2",
+    "aws-amplify": "^6.0.12",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
